[tool.poetry]
name = "somerville-municipal-interface"
version = "0.1.0"
description = ""
authors = ["Brad Deutsch <deutsch.bradley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
